--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,19 @@
 /*---break---*/
 @custom-variant dark (&:is(.dark *));
 
+html {
+  scroll-behavior: smooth !important;
+  /* El scroll-padding es vital porque tu navbar es FIXED */
+  scroll-padding-top: 5rem; 
+}
+
+/* Evita que el overflow hidden bloquee el scroll */
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+
 html, body {
   transform-origin: center center;
 }
@@ -475,6 +488,7 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 1) 26%, rgba(54, 17, 64, 1) 54
   background-color: rgba(110, 26, 76, 1);
   text-align: center;
 }
+
 
 
 }
